--- a/Lab2/master.css
+++ b/Lab2/master.css
@@ -9,6 +9,8 @@ text-align: center;
 img {
   width:80%;
   display: block;
+  border: 5px red solid;
+
 }
 
 .flex-container {
@@ -19,6 +21,7 @@ height: 80vh;
 width: 80vw;
 
 }
+
 
 
 
